Fix responsive rocket sidebar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 0;
+  height: 0;
 }
 
 ::-webkit-scrollbar-track {
@@ -39,16 +40,14 @@ body {
   border-radius: 2px;
 }
 
-@media (min-width: 1024px) {
-  html,
-  body {
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
+html,
+body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
 
-  body::-webkit-scrollbar {
-    display: none;
-  }
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .cursor {
